# puredarwin

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build-pr.yml
cmake/: crosscompile.cmake  mig.cmake
qemu/: README.md  fetch-image.sh  run.sh
qemu/profiles/: pd-17.4.env  pd-17.4.ini  pd-xmas-bte.env  pd-xmas-bte.ini
src/Kernel/Extensions/: CMakeLists.txt
src/Kernel/Extensions/IOPCIFamily/: IOPCIDevice.cpp
src/Kernel/Extensions/IOPCIFamily/include/IOKit/apiodma/: ApplePIODMADefinitions.h
src/Kernel/Extensions/IOStorageFamily/: CMakeLists.txt
src/Kernel/Extensions/pthread/: CMakeLists.txt  kern_support.c
src/Kernel/libfirehose_kernel/: CMakeLists.txt
src/Kernel/xnu/: CMakeLists.txt  preprocess_files.cmake
src/Kernel/xnu/bsd/kern/: decmpfs.c  kern_exec.c  kpi_socket.c  sys_generic.c  uipc_syscalls.c
src/Kernel/xnu/bsd/nfs/: nfs_serv.c
src/Kernel/xnu/bsd/sys/: Makefile  spawn_internal.h  uio_internal.h
src/Kernel/xnu/bsd/vfs/: vfs_attrlist.c  vfs_lookup.c  vfs_quota.c  vfs_subr.c  vfs_syscalls.c  vfs_vnops.c
src/Kernel/xnu/bsd/vm/: vm_unix.c
src/Kernel/xnu/cmake/: MakeInc.cmd.in  MakeInc.def.in
src/Kernel/xnu/config/: MASTER.arm64.bcm2837  Private.arm64.MacOSX.exports  Private.arm64.exports  Unsupported.arm64.MacOSX.exports
src/Kernel/xnu/iokit/IOKit/: IORPC.h
src/Kernel/xnu/makedefs/: MakeInc.def
src/Kernel/xnu/osfmk/arm/: bcm2837_kernel_stubs.c
src/Kernel/xnu/osfmk/arm/pmap/: pmap.c  pmap.h  pmap_ppl_opensource_stubs.c  pmap_ppl_opensource_stubs.h
src/Kernel/xnu/osfmk/arm64/: arm_vm_init.c  kpc.c  start.s
src/Kernel/xnu/osfmk/arm64/ppl/: sart.h  uat.h
src/Kernel/xnu/osfmk/conf/: files.arm64
src/Kernel/xnu/osfmk/kperf/: kperf_kpc.h
src/Kernel/xnu/osfmk/mach/: Makefile
src/Kernel/xnu/osfmk/mach/arm/: vm_param.h
src/Kernel/xnu/osfmk/vm/: vm_compressor.c  vm_compressor_backing_store.c
src/Kernel/xnu/pexpert/pexpert/arm64/: board_config.h
src/Kernel/xnu/security/: mac_vfs_subr.c
src/Kernel/xnu/tools/lldbmacros/core/: syntax_checker.py
src/Libraries/AvailabilityVersions/include/: AvailabilityInternal.h
src/Libraries/libSystem/libsystem_kernel/: CMakeLists.txt
src/Libraries/libSystem/libsystem_kernel/custom/: SYS.h  __ptrace.s
tools/cctools/ld64/src/ld/code-sign-blobs/: blob.h
